--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Salty Soya is a VTuber and ASMR creator. Visit for official links, credits, and a gallery of fanart, art, and community photos."
+    />
     <title>Salty Soya</title>
     <link
       rel="preload"
