--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
         made by <a href="https://lukimana.moe" target="_blank" rel="noopener noreferrer"> lukimana</a><br />
         with music from <a href="https://vndb.org/v24717" target="_blank" rel="noopener noreferrer">kinkoi</a><br />
         and footer images created by <a href="https://kybit.carrd.co/" target="_blank" rel="noopener noreferrer">Ky</a><br />
+        you can find the github <a href="https://github.com/lukimana/saltysoya.moe" target="_blank" rel="noopener noreferrer">here</a><br />
       </div>
     </div>
     <audio
