--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
           </div>
         </div>
         <div class="sub-spacer"></div>
-        <h2>pat the cute demon</h2>
+        <h2>pat the adorable demon</h2>
         <div class="divider" id="feesh-divider"></div>
         <div id="feesh-counter" class="feesh-counter">
-          <span class="feesh-counter-label">the cute water demon has been patted</span>
+          <span class="feesh-counter-label">the water demon oni has been patted</span>
           <span id="feesh-counter-value" class="feesh-counter-value">0</span>
           <span class="feesh-counter-label">times</span>
         </div>
