--- a/index.html
+++ b/index.html
@@ -199,6 +199,14 @@
           </div>
         </div>
         <div class="sub-spacer"></div>
+        <h2>schedule</h2>
+        <div class="divider"></div>
+        <img
+          class="schedule-image"
+          src="schedule/schedule.png"
+          alt="Schedule"
+        />
+        <div class="spacer"></div>
         <h2>pat the cute demon</h2>
         <div class="divider" id="feesh-divider"></div>
         <div id="feesh-counter" class="feesh-counter">
