--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
           src="schedule/schedule.png"
           alt="Schedule"
         />
+        <p class="schedule-fallback">schedule image unavailable. check the current status on discord!</p>
         <div class="spacer"></div>
         <h2>pat the cute demon</h2>
         <div class="divider" id="feesh-divider"></div>
