--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="styles.css" />
-
+    
+    <script defer src="https://umami.brikez.moe/umazing.js" data-website-id="f53e575c-5769-4635-8638-9f904d727011"></script>
   </head>
   <body>
     <div class="page">
